--- a/css/estilo.css
+++ b/css/estilo.css
@@ -841,3 +841,8 @@ body::after {
   width:100%;
   text-decoration:none;
 }
+
+.pagina4 .p4-btn.desativado{
+  opacity:0.7;
+  cursor:not-allowed;
+}
